# aiogram_tests

./: .pre-commit-config.yaml  Pipfile  README.md  dev_requirements.txt  pyproject.toml  pyrightconfig.json  requirements.txt  tox.ini
.github/workflows/: build.yml  ci.yml
aiogram_pytest/: handler.py  utils.py
aiogram_pytest/types/: __init__.py
aiogram_pytest/types/dataset/: __init__.py  base.py
aiogram_tests/: __init__.py  exceptions.py  handler.py  mocked_bot.py  requester.py  utils.py
aiogram_tests/handler/: __init__.py  base.py  handler.py
aiogram_tests/types/: __init__.py
aiogram_tests/types/dataset/: __init__.py  base.py
examples/: example_tests.py  test_bot.py
tests/: bot.py  middleware.py  test_bot.py  test_dataset_item.py  test_handler.py  test_requester.py  test_utils.py
