[build-system]
requires = ["aiogram ~= 3.0.0b7", "setuptools"]

[project]
name = "aiogram_tests"
version = "1.0.2"
authors = [
    { name = "Timur", email = "pavlov.timur556@yandex.ru" }
]
description = "A library for testing your bots on aiogram"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aiogram-tests/aiogram_tests"
